# polars_library

./: .gitignore  movies.ipynb  pyproject.toml  requirements.txt  test.ipynb
.claude/: settings.local.json
Eurojackpot/: extract_2024.ipynb  extract_2025.ipynb  feature_enginiering.ipynb
Polars/: films_analysis.ipynb  polars.ipynb  polars_gpu.ipynb
Polars Get Started/: polars_get_started.ipynb
Youtube Lessons/Polars Is The Faster pandas/: polars.ipynb
Youtube Lessons/Polars Tutorial/: 1_tutorial.ipynb  2_tutorial.ipynb  3_tutorial.ipynb  4_tutorial.ipynb  5_tutorial.ipynb
ibis_framework/: new_connection.ipynb  penguins.ddb  testing.ipynb  testing1.ipynb  testing_3.ipynb
kaggle/: 10000 latest movies datasets 2025.ipynb  All Computer Prices.ipynb  Electric_Vehicle_Population_Data.ipynb  Human-AI Interaction.ipynb  Steam Monthly Average Players.ipynb  Student_Placement_Skills_2025.ipynb  TMDB_movie_dataset_v11.ipynb  Top Spotify Listening History Songs in Countries.ipynb  anime_dataset.ipynb  atp_matches_tennis.ipynb  car_regression.ipynb  covid_19.ipynb  covid_lat_lat_data.ipynb  electric_wheels.ipynb  game_details_playstation.ipynb  global_disaster_response_2018_2024.ipynb  imdb_250_series_reviews.ipynb  investment_in_building_construction.ipynb  laptop_prices.ipynb  movies_dataset.ipynb  movies_new.ipynb  network_intrudtion.ipynb  olympic_data.ipynb  russia_alcohol.ipynb  salary_data.ipynb  sp_500.ipynb  spotify_2026_scenarios.ipynb  students_ai.ipynb  trending_searches_in_us.ipynb  vehicles.ipynb  video_games.ipynb  webserver_logs.ipynb  youtube_top100.ipynb
(+2 files in other folders)
